-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 5.5, 10.1, 10.2, 10.3, 10.3.13, 10.4, 10.0
-
Fix Version/s: 10.1.41
-
Component/s: Storage Engine - InnoDB
-
Labels:None
We are migrating (dump, restore) data from Mysql version 5.5.61-38.13-log to MariaDB version 10.3.13, however we found a problem when RIGHT JOIN statement hangs, but inner join does not.
This one works in Mysql but not in MariaDB:
SELECT t1.modifiedBy, t1.timestamp FROM table1 t1 RIGHT JOIN table2 t2 ON t2.REV=t1.id RIGHT JOIN table3 t3 ON t3.id=t2.profile_id RIGHT JOIN table4 t4 ON t4.id=t3.person_id WHERE t1.timestamp < 1555324525347 AND t1.timestamp > 1544873725347 AND t2.REVTYPE=2; |
We found out that INNER JOIN, LEFT JOIN works, but RIGHT JOIN hangs.
Any ideas why?
Dump of the database: http://www.rasca.net/tmp/dump.tar.gz